2002-07-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amfeatures.c (am_feature_to_string): Return the string
	  "UNKNOWNFEATURE" if no features.
	* common-src/amfeatures.c (am_string_to_feature): Return NULL if the
	  string is "UNKNOWNFEATURE".

2002-07-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/file.c (debug_agets): line_free was badly set when
	the buffer size in increased.

2002-07-19  John R. Jackson (jrj@purdue.edu)

	* common-src/amanda.h: Fix bad #define.

2002-07-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by
	  David Munro <D.Munro@surrey.ac.uk>

	* common-src/sl.c (new_sl): Alloc (sl_t) instead of (sl_t *).
          
2002-06-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Bug reported by 
	  Jonathan R. Johnson <Jonathan.Johnson@MinnetonkaSoftware.com>

	* server-src/reporter.c: Fix psfname filename.

2002-05-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup.c: Don't do compression if it is server side.
	* client-src/sendbackup-dump.c: Ditto.
	* client-src/sendbackup-gnutar.c: Ditto.

2002-05-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Manuel Bouyer <bouyer@antioche.lip6.fr>

	* server-src/taper.c (detach_buffers): Fix compilation with mmap.

2002-04-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (extract_files): Set dump_device_name
	  after the call of okay_to_continue.

2002-04-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	New features to describe the OPTIONS line of a REP packet.
	* common-src/amfeatures.h: Add fetures fe_rep_options_maxdumps,
	  fe_rep_options_hostname, fe_rep_options_features and
	  fe_rep_options_sendbackup_options.
	* common-src/amfeatures.c (am_init_feature_set): Add
	  fe_rep_options_features.
	* client-src/selfcheck.c: Write REP packet according to server features.        * client-src/sendbackup.c: Ditto.
	* client-src/sendsize.c: Ditto.
